maze.lessons.maze.island.IslandMaze.scala.error
Escaper:37: error: ')' expected but 'if' found.
      if (!estFaceMur()){
      ^